k8s/applicatie/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-interface
  namespace: applicatie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-interface
  template:
    metadata:
      labels:
        app: web-interface
    spec:
      serviceAccountName: web-sa
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: web-html
---
apiVersion: v1
kind: Service
metadata:
  name: web-interface
  namespace: applicatie
spec:
  selector:
    app: web-interface
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-interface
  namespace: applicatie
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.leerteam3.lab
    http:
      paths:
      - path: /web
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-interface
            port:
              number: 80
